--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     </div>
 
     <footer>
-        <p>Contact: <a href="mailto://dushyantkumawat666@gmail.com" target="_blank">Email</a> | LinkedIn: <a href="https://www.linkedin.com/in/dushyant-kumawat-70027448/" target="_blank">Dushyant</a></p>
+        <p>Contact: <a href="mailto:dushyantkumawat666@gmail.com" target="_blank">dushyantkumawat666@gmail.com</a> | LinkedIn: <a href="https://www.linkedin.com/in/dushyant-kumawat-70027448/" target="_blank">dushyant-kumawat-70027448</a></p>
         <p>© 2025 Lead Unity Developer Portfolio</p>
     </footer>
 </body>
